src/parser/snapshots/monkey_language_server__parser__test__fn_call_happy_1.snap
---
source: src/parser/test.rs
description: add()
expression: result
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Ok(
            [],
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 3,
            },
            end: Position {
                line: 0,
                character: 5,
            },
        },
    },
]

===================================

add()
