src/parser/snapshots/monkey_language_server__parser__test__fn_call_happy_1_errors.snap
---
source: src/parser/test.rs
description: add()
expression: "parser_errors(\"add()\", errors)"
---
add()
