src/parser/snapshots/monkey_language_server__parser__test__fn_call_happy_4_errors.snap
---
source: src/parser/test.rs
description: "fn(x, y){ return x + y; }(1, 2);"
expression: "parser_errors(\"fn(x, y){ return x + y; }(1, 2);\", errors)"
---
fn(x, y){ return x + y; }(1, 2);
