src/parser/snapshots/monkey_language_server__parser__test__fn_call_happy_5.snap
---
source: src/parser/test.rs
description: "add(x, y,);"
expression: result
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,4)->(0,5)),
                        name: "x",
                    },
                ),
                Ok(
                    Identifier {
                        token: Token(Identifier, "y", (0,7)->(0,8)),
                        name: "y",
                    },
                ),
            ],
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 10,
            },
        },
    },
]

===================================

add(x, y,);
