src/parser/snapshots/monkey_language_server__parser__test__fn_call_happy_6_errors.snap
---
source: src/parser/test.rs
description: "add(6, 7 * 8); 2"
expression: "parser_errors(\"add(6, 7 * 8); 2\", errors)"
---
add(6, 7 * 8); 2
