src/parser/snapshots/monkey_language_server__parser__test__fn_call_happy_7_errors.snap
---
source: src/parser/test.rs
description: "add(2, add(6, 7 * 8))"
expression: "parser_errors(\"add(2, add(6, 7 * 8))\", errors)"
---
add(2, add(6, 7 * 8))
